# emulator-networkaccess

./: .gitignore  Protocol-1.0 Draft-v4.md  Protocol-1.0 preview.md  Protocol-1.0 preview2.md  Protocol-Draft-v1.md  Protocol-Draft-v2.md  Protocol-Draft-v3.md  Protocol.md  README.md
.github/workflows/: test.yaml
c_includes/: emulator_network_access_defines.h
dummy/Dummy Emulator/: CMakeLists.txt  dummy.c  dummy.h
dummy/Dummy server/: CMakeLists.txt  dummy.c  dummy.h
generic poll server/: generic_poll_server.c  generic_poll_server.h
proto-validator/: Cargo.toml
proto-validator/src/: main.rs  nwa.rs  nwachecker.rs
